unit tests in place and will maintain the current (technically wrong
but behaviorally correct) code until such time as the unit tests fail
or other problems arise which require us to revisit.
----------------------------------------------------------------------
Thu Feb 23 14:17:57 2012                            Jason Stover (jms)

Added -e flag to wwconfig. For use with Bourne output, and will print
the export lines. Otherwise just print the [VAR]=[VAL] lines.

Intial start of SYSCONFDIR/warewulf/wwfunctions for Bash shell scripts
to break apart a bunch of the replicated code (mkchroot, etc..). Maybe
usefull down the road for other things.
----------------------------------------------------------------------
Wed Feb 29 11:20:30 2012                        Michael Jennings (mej)

Fair warning:  There (may) be dragons.

Fundamentally revamping the external interface to NetDev object access
via Node objects.  The goal here was to make naming, invocation, and
internal handling more consistent.  This is still pending review and
subject to change.  There are also some subtle bugfixes and cleanups
of documentation as well as some consolidation of functionality.
----------------------------------------------------------------------
Wed Feb 29 12:40:55 2012                        Michael Jennings (mej)

Update "node" CLI to match API changes.

Minor optimizations, cleanups, and typo fixes.

Added "--dump" option to "object" CLI for deep-dive object diagnosis.
Not for the faint of heart.  ;-)
----------------------------------------------------------------------
Thu Mar  1 18:40:22 2012                        Michael Jennings (mej)

Bump version to 3.2.

Update some documentation.  Fix some typos.  Minor optimizations.

Add Warewulf::Term::yesno() to encapsulate some commonly-used
functionality.

RFE from Greg:  When debugging, add caller information to warning and
error messages too.
----------------------------------------------------------------------